Bug 115895 - Color picker images missing in Impress
Summary: Color picker images missing in Impress
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: high normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0
Keywords: bibisected, bisected, regression
: 115952 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-02-21 04:47 UTC by Aron Budea
Modified: 2018-02-25 15:39 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (14.41 KB, image/png)
2018-02-21 04:47 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2018-02-21 04:47:17 UTC
Created attachment 140028 [details]
Screenshot

Start Impress. The images for color widgets in the toolbar are missing (see screenshot).

Observed using LO 6.1 daily build (a8d4d4b9edca48b8fb94dbb06d7dd1e689b07b98, 2018-02-20_23:42:48) / Windows 7.
The images are there in  6.0.1.1.
=> regression

Bibisected to the following commit using repo bibisect-win32-6.1. Adding Cc: to Noel Grandin, please take a look.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=88ca1a6f75b1e94136e04e8dc65b98955d0e8aaf
author		Noel Grandin <noel.grandin@collabora.co.uk>	2018-02-14 15:30:50 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2018-02-15 12:52:53 +0100

move ToolboxButtonColorUpdater bitmap update to VirtualDevice
Comment 1 Telesto 2018-02-21 08:56:48 UTC
This isn't limited to Impress :-). Same in Writer
Comment 2 Xisco Faulí 2018-02-23 15:01:16 UTC
*** Bug 115952 has been marked as a duplicate of this bug. ***
Comment 3 Noel Grandin 2018-02-23 15:02:48 UTC
fix coming soon:
   https://gerrit.libreoffice.org/#/c/50248/
Comment 4 Commit Notification 2018-02-25 05:40:26 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0081a0d9465bf1f26d68cff10f2cfc9a662f8824

tdf#115895 - Color picker images missing in Impress

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.