WIP tdf#115895 - Color picker images missing in Impress

it looks like the OutputDevice is not merging the second image into the
first.
DrawImageFlags::SemiTransparent gets me part of the way there but makes
both images washed out

Change-Id: I4eebd7a23546a77dc9df2e2dad12d37eec4560ef